assets/css/markdown.css
#nuxt-content h1,
#nuxt-content h2,
#nuxt-content h3,
#nuxt-content p,
#nuxt-content ul li,
#nuxt-content table th,
#nuxt-content table td {
  color: #3c3c3c;
}

#nuxt-content h2 {
  font-size: 24px;
  padding-top: 32px;
  margin-bottom: 24px;
}

#nuxt-content h2:first-child {
  padding-top: 0;
}

#nuxt-content h3 {
  font-size: 20px;
  margin-bottom: 24px;
}

#nuxt-content h1 > a,
#nuxt-content h2 > a,
#nuxt-content h3 > a {
  color: #3c3c3c;
  text-decoration: none;
}

#nuxt-content a {
  text-decoration: underline;
}

#nuxt-content p {
  margin-bottom: 16px;
}

#nuxt-content p:last-child {
  margin-bottom: 0;
}

#nuxt-content ul {
  margin-bottom: 16px;
}

#nuxt-content ul li {
  list-style: inside;
}

#nuxt-content ol li {
  list-style: inside;
  list-style-type: decimal;
}

#nuxt-content blockquote {
  background-color: #f6f6f6;
  border: 1px solid #ddd;
  font-style: italic;
  padding: 16px;
  border-radius: 4px;
  margin-bottom: 16px;
}

#nuxt-content pre {
  background-color: #f6f6f6;
  border: 1px solid #ddd;
  border-radius: 6px;
  font-size: 12px;
  overflow: hidden;
  padding: 8px 16px;
  margin-bottom: 16px;
  text-wrap: nowrap;
}

#nuxt-content table {
  width: 100%;
  border: 1px solid #ddd;
  border-collapse: collapse;
  margin-bottom: 16px;
}

#nuxt-content table th,
#nuxt-content table td {
  font-size: 14px;
  border: 1px solid #ddd;
  padding: 8px 16px;
}

#nuxt-content img {
  display: block;
  width: 100%;
  height: 100%;
  margin-bottom: 16px;
}

